--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 			</div>
 		</div>
     <div id="special1">
-    
+
 
 		<div class="special_content">
 			<div class="special_slider_container">
@@ -120,7 +120,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
           </div>
             <div class="owl-item">
     <div class="special_item d-flex flex-column align-items-center justify-content-center">
-      <div class="special_item_background"><img src="img/Kashmir1.webp"></div>
+      <div class="special_item_background"><img src="img/kashmir1.webp"></div>
       <div class="special_item_content text-center">
         <div class="special_category">Visiting</div>
         <div class="special_title"><a href="offers.html">Kashmir</a></div>
