--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,6 +30,6 @@
 <hr>
 <div class="container center">
 <h3>Why <span class="pink-text">TripString???</span></h3>
-<img src="/img/whytrip.png" alt="">
+<img src="/img/whytrip.PNG" alt="">
 </div>
 <% include ./partials/footer %>
