--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,13 +52,27 @@
         </ul>
         <ul class="side-nav" id="mobile-nav">
           <li>
-            <a href="#">Home</a>
+            <a href="/tripstring">Home</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="/about">About</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a href="#foot">Contact</a>
+          </li>
+          <li>
+            <a href="#special1">TravelPackages</a>
+          </li>
+          <li>
+            <a href="#">Mice</a>
+          </li>
+          <li>
+            <a href="#">DestinationWeddings</a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="material-icons">person</i>
+            </a>
           </li>
         </ul>
       </div>
