--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,7 +6,7 @@
  		<div class="col-lg-12 center">
  			<div class="content">
  				<h1 class="text-white">Trip string</h1>
- 				<h3 class="text-white">Start planning your next trip & events toda</h3>
+ 				<h3 class="text-white">Start planning your next trip & events today</h3>
  				<hr>
  				<a href="/tripstring" class="btn btn-default btn-lg"><i class="fa fa-tree"></i> Get Started!</a>
  			</div>
