--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@
             <a href="#special1">TravelPackages</a>
           </li>
           <li>
-            <a href="#">Mice</a>
+            <a href="/form_mice">Mice</a>
           </li>
           <li>
             <a href="#">DestinationWeddings</a>
@@ -55,7 +55,7 @@
             <a href="/tripstring">Home</a>
           </li>
           <li>
-            <a href="/about">About</a>
+            <a href="/views/about.ejs">About</a>
           </li>
           <li>
             <a href="#foot">Contact</a>
@@ -64,7 +64,7 @@
             <a href="#special1">TravelPackages</a>
           </li>
           <li>
-            <a href="#">Mice</a>
+            <a href="/form_mice">Mice</a>
           </li>
           <li>
             <a href="#">DestinationWeddings</a>
