--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 					<!-- Special Offers Item -->
 					<div class="owl-item">
 						<div class="special_item">
-							<div class="special_item_background"><img src="img/shimla1.jpg"></div>
+							<div class="special_item_background"><img src="images/special_3.jpg"></div>
 							<div class="special_item_content text-center">
 								<div class="special_category">Visiting</div>
 								<div class="special_title"><a href="/shimla">Shimla</a></div>
@@ -92,7 +92,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 							<div class="special_item_background"><img src="img/manali.jpg"></div>
 							<div class="special_item_content text-center">
 								<div class="special_category">Heaven</div>
-								<div class="special_title"><a href="offers.html">Manali</a></div>
+								<div class="special_title"><a href="/manali">Manali</a></div>
 							</div>
 						</div>
 					</div>
@@ -103,7 +103,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 							<div class="special_item_background"><img src="img/dharam2.jpg" ></div>
 							<div class="special_item_content text-center">
 								<div class="special_category">Sunbathing</div>
-								<div class="special_title"><a href="offers.html">Dharamshala</a></div>
+								<div class="special_title"><a href="/dharam">Dharamshala</a></div>
 							</div>
 						</div>
 					</div>
@@ -114,7 +114,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 							<div class="special_item_background"><img src="img/Tigerhill.jpg"></div>
 							<div class="special_item_content text-center">
 								<div class="special_category">Visiting</div>
-								<div class="special_title"><a href="offers.html">Darjeling</a></div>
+								<div class="special_title"><a href="/darjelling">Darjeling</a></div>
 							</div>
 						</div>
           </div>
@@ -123,7 +123,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
       <div class="special_item_background"><img src="img/kashmir1.webp"></div>
       <div class="special_item_content text-center">
         <div class="special_category">Visiting</div>
-        <div class="special_title"><a href="offers.html">Kashmir</a></div>
+        <div class="special_title"><a href="/kashmir">Kashmir</a></div>
       </div>
     </div>
   </div>
@@ -157,7 +157,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 							<div class="last_text">
 Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur - Jaisalmer - Bikaner - Mandawa - Delhi
 </div>
-							<div class="button last_button"><a href="offers.html">See Offer</a></div>
+							<div class="button last_button"><a href="/rajasthan">See Offer</a></div>
 						</div>
 					</div>
 				</div>
