--- a/views/package-tour/kashmir.ejs
+++ b/views/package-tour/kashmir.ejs
@@ -25,26 +25,43 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
                 <img  class="responsive-img" src="images/top_1.jpg" alt="">
                 <h4>Tour Cost Includes</h4>
 
-                <ul>
-                  <li>*Hotel / Houseboats on Twin sharing Basis.</li>
-                  <li>*Meal Plan: MAPAI (Room + Breakfast + Dinner )</li>
-                  <li>*All surface travelling by 01 Non AC Indica / Tavera /Qualis.</li>
-                  <li>*All surface travelling by 01 Non AC Tempo Traveller.</li>
-                  <li>*01 Shikara Ride.</li>
-                  <li>*Sightseeing as per the itinerary.</li>
-                  <li>*All Arrival/Departure transfer as mentioned in Itinerary.</li>
-                  <li>*All present applicable taxes as on date.</li>
-                </ul>
-                <h4>Tour Cost Excludes</h4>
-                <ul>
-                  <li>*Any Airfare, Train fare, Overland Journey which is not mentioned in the Itinerary.</li>
-                  <li>*Any Medical/rescue evacuation due to mishaps.</li>
-                  <li>*Any personal nature items like Laundry, bar bills, table bills, camera fee, tips or any other item</li>
-                  <li>*Mineral water / Soft or hard drinks / Starters</li>
-                  <li>*Sightseeing of Chandanwadi, Aru and Baisaran in Pahalgam.</li>
-                  <li>*Gondola Ride in Gulmarg</li>
-                  <li>*Any other things that is not included in the “Package Cost Includes” Column.</li>
-                </ul>
+  <ul class="collapsible">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>Tour Cost Includes</div>
+      <div class="collapsible-body"><ul><li >*Hotel / Houseboats on Twin sharing Basis.</li>
+      <li >*All surface travelling by 01 Non AC Indica / Tavera /Qualis.</li>
+      <li >*All surface travelling by 01 Non AC Tempo Traveller.</li>
+      <li >*01 Shikara Ride.</li>
+      <li >*Sightseeing as per the itinerary.</li>
+      <li >*All Arrival/Departure transfer as mentioned in Itinerary.</li>
+      <li >*All present applicable taxes as on date.</li>
+      <li >*Hotel / Houseboats on Twin sharing Basis.</li>
+      <li >*All surface travelling by 01 Non AC Indica / Tavera /Qualis.</li>
+      <li >*All surface travelling by 01 Non AC Tempo Traveller.</li>
+      <li >*01 Shikara Ride.</li>
+      <li >*Sightseeing as per the itinerary.</li>
+      <li >*All Arrival/Departure transfer as mentioned in Itinerary.</li>
+      <li >*All present applicable taxes as on date.</li></ul></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>Tour Cost Excludes</div>
+      <div class="collapsible-body"><ul>
+        <li>*Any Airfare, Train fare, Overland Journey which is not mentioned in the Itinerary.</li>
+        <li>*Any Medical/rescue evacuation due to mishaps.</li>
+        <li>*Any personal nature items like Laundry, bar bills, table bills, camera fee, tips or any other item</li>
+        <li>*Mineral water / Soft or hard drinks / Starters</li>
+        <li>*Sightseeing of Chandanwadi, Aru and Baisaran in Pahalgam.</li>
+        <li>*Gondola Ride in Gulmarg</li>
+        <li>*Any other things that is not included in the “Package Cost Includes” Column.</li>
+      </ul></div>
+    </li>
+
+  </ul>
+
+
+
+
+
               </div>
 							<div class="col l8">
 								<h2 class="center teal-text">kashmir TOUR (03 NIGHTS / 04 DAYS )</h2>
@@ -130,27 +147,35 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
         							<div class="row">
                          <div class="col l4">
                         <img  class="responsive-img" src="images/top_1.jpg" alt="">
-                        <h4>Tour Cost Includes</h4>
-                        <ul>
-                          <li>*Hotel / Houseboats on Twin sharing Basis.</li>
-                          <li>*Meal Plan: MAPAI (Room + Breakfast + Dinner )</li>
-                          <li>*All surface travelling by 01 Non AC Indica / Tavera /Qualis.</li>
-                          <li>*All surface travelling by 01 Non AC Tempo Traveller.</li>
-                          <li>*01 Shikara Ride.</li>
-                          <li>*Sightseeing as per the itinerary.</li>
-                          <li>*All Arrival/Departure transfer as mentioned in Itinerary.</li>
-                          <li>*All present applicable taxes as on date.</li>
-                        </ul>
-                        <h4>Tour Cost Excludes</h4>
-                        <ul>
-                          <li>*Any Airfare, Train fare, Overland Journey which is not mentioned in the Itinerary.</li>
-                          <li>*Any Medical/rescue evacuation due to mishaps.</li>
-                          <li>*Any personal nature items like Laundry, bar bills, table bills, camera fee, tips or any other item</li>
-                          <li>*Mineral water / Soft or hard drinks / Starters</li>
-                          <li>*Sightseeing of Chandanwadi, Aru and Baisaran in Pahalgam.</li>
-                          <li>*Gondola Ride in Gulmarg</li>
-                          <li>*Any other things that is not included in the “Package Cost Includes” Column.</li>
-                        </ul>
+                        <ul class="collapsible">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>Tour Cost Includes</div>
+      <div class="collapsible-body"><ul>
+        <li>*Hotel / Houseboats on Twin sharing Basis.</li>
+        <li>*Meal Plan: MAPAI (Room + Breakfast + Dinner )</li>
+        <li>*All surface travelling by 01 Non AC Indica / Tavera /Qualis.</li>
+        <li>*All surface travelling by 01 Non AC Tempo Traveller.</li>
+        <li>*01 Shikara Ride.</li>
+        <li>*Sightseeing as per the itinerary.</li>
+        <li>*All Arrival/Departure transfer as mentioned in Itinerary.</li>
+        <li>*All present applicable taxes as on date.</li>
+      </ul></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>Tour Cost Excludes</div>
+      <div class="collapsible-body"><ul>
+        <li>*Any Airfare, Train fare, Overland Journey which is not mentioned in the Itinerary.</li>
+        <li>*Any Medical/rescue evacuation due to mishaps.</li>
+        <li>*Any personal nature items like Laundry, bar bills, table bills, camera fee, tips or any other item</li>
+        <li>*Mineral water / Soft or hard drinks / Starters</li>
+        <li>*Sightseeing of Chandanwadi, Aru and Baisaran in Pahalgam.</li>
+        <li>*Gondola Ride in Gulmarg</li>
+        <li>*Any other things that is not included in the “Package Cost Includes” Column.</li>
+      </ul></div>
+    </li>
+  </ul>
+
+
                       </div>
         							<div class="col l8">
         								<h2 class="center teal-text">kashmir TOUR (6 NIGHTS / 7 DAYS )</h2>
@@ -228,6 +253,9 @@ $(document).ready(function(){
 });
 
 
+$(document).ready(function(){
+    $('.collapsible').collapsible();
+  });
 
 </script>
 
