--- a/views/package-tour/manali.ejs
+++ b/views/package-tour/manali.ejs
@@ -16,18 +16,24 @@
 
 </div>
 </div>
+<div class="container">
+<ul class="collapsible">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i> Manali Package for 2N\3D</div>
+      <div class="collapsible-body">
 
 <div class="container">
 							<div class="row">
                  <div class="col l4">
                 <img  class="responsive-img" src="images/top_1.jpg" alt="">
                 <h4>  InclusionsPLAN </h4>
-                <ul>
-                  <li>Sightseeing</li>
-                  <li>» Accommodation</li>
-                  <li>» Meals</li>
-                  <li>» Local Transport</li>
-                </ul>
+               <ul>
+                 <li>Sightseeing</li>
+                 <li>» Accommodation</li>
+                 <li>» Meals</li>
+                 <li>» Local Transport</li>
+               </ul>
+
               </div>
 							<div class="col l8">
 								<h2 class="center teal-text">    Manali Package for 2N\3D</h2>
@@ -54,11 +60,13 @@ After Breakfast at hotel you need to vacate the room by 11 AM. Afternoon will be
 							</div>
 						</div>
           </div>
-          <br>
-<hr>
-<br><br><br>
+        </div>
+      </li>
 
 
+      <li>
+        <div class="collapsible-header"><i class="material-icons">filter_drama</i>Manali Package for 3N\4D</div>
+        <div class="collapsible-body">
 
 
           <div class="container">
@@ -108,12 +116,16 @@ Our expertly curated Manali tour itinerary provides the best experience. This is
     		</div>
       	</div>
         </div>
-
+      </div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>3N-4D special honeymoon packages manali from Delhi</div>
+      <div class="collapsible-body">
         <div class="container">
                       <div class="row">
                          <div class="col l4">
                         <img  class="responsive-img" src="images/top_1.jpg" alt="">
-                        <h4>This package includes:</h4>                    
+                        <h4>This package includes:</h4>
                         <ul>
                           <li>»  Evening Tea with Cookies</li>
                           <li>»Unlimited Tea/ Coffee on Demand</li>
@@ -168,7 +180,9 @@ Welcome Drinks on arrival (Non Alcoholic)
       </div>
       </div>
 
-
+</div>
+</div>
+</ul>
 
         <div class="fixed-action-btn">
   <a class="btn-floating btn-large red">
@@ -185,6 +199,9 @@ Welcome Drinks on arrival (Non Alcoholic)
 $(document).ready(function(){
  $('.fixed-action-btn').floatingActionButton();
 });
+$(document).ready(function(){
+    $('.collapsible').collapsible();
+  });
 
 </script>
 
