--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,18 +31,18 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 <div id="second">
 <div class="container">
 <div class="row">
-  <div class="col col-lg-4 col-sm-3"><img src="/img/group2.jpg" alt=""><div class="centered">Group Tour</div></div>
-  <div class="col col-lg-5 col-sm-5"><img src="/img/honeymoon.jpg"  alt=""><div class="centered">Honeymoon Tour</div></div>
+  <div class="col col-lg-4 col-sm-4"><img src="/img/group2.jpg" alt=""><div class="centered">Group Tour</div></div>
+  <div class="col col-lg-5 col-sm-4"><img src="/img/honeymoon.jpg"  alt=""><div class="centered">Honeymoon Tour</div></div>
 
   <div class="col col-lg-3 col-sm-4"><img src="/img/international.jpg"  alt=""><div class="centered">International Tour</div></div>
 
 </div>
 
 <div class="row">
-  <div class="col col-lg-3 col-sm-5"><img src="/img/family1.jpg" alt=""><div class="centered">Family Tour</div></div>
-  <div class="col col-lg-3 col-sm-5"><img src="/img/domestic1.png" alt=""><div class="centered">Domestic Tour</div></div>
-  <div class="col col-lg-3 col-sm-5"><img src="/img/business.jpg" alt=""><div class="centered">Business Tour</div></div>
-  <div class="col col-lg-3 col-sm-5"><img src="/img/india.jpg" alt=""><div class="centered">Indian Tour</div></div>
+  <div class="col col-lg-3 col-sm-3"><img src="/img/family1.jpg" alt=""><div class="centered">Family Tour</div></div>
+  <div class="col col-lg-3 col-sm-3"><img src="/img/domestic1.png" alt=""><div class="centered">Domestic Tour</div></div>
+  <div class="col col-lg-3 col-sm-3"><img src="/img/business.jpg" alt=""><div class="centered">Business Tour</div></div>
+  <div class="col col-lg-3 col-sm-3"><img src="/img/india.jpg" alt=""><div class="centered">Indian Tour</div></div>
 
 
 </div>
@@ -59,7 +59,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 		<div class="container">
 
 			<div class="row">
-				<div class="col">
+				<div class="col l12 s12">
 					<div class="section_title text-center">
 						<h1 class="green-text text-accent-4" id="font">Special offers</h1>
             <hr>
@@ -131,7 +131,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 
 </div>
 
-<div class="special_slider_nav d-flex flex-column align-items-center justify-content-center">
+<div class="special_slider_nav d-flex flex-column align-items-center justify-content-center ">
   <img src="images/special_slider.png" alt="">
 </div>
 </div>
@@ -147,7 +147,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 		<div class="container">
 			<div class="row">
 				<div class="last_logo"><img src="images/last_logo.png" alt=""></div>
-				<div class="col-lg-6 last_col">
+				<div class="col-lg-6 col-sm-12 last_col">
 					<div class="last_item">
 						<div class="last_item_content">
 							<div class="last_subtitle">INDIA</div>
@@ -161,7 +161,7 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-6 last_col">
+				<div class="col-lg-6  col-sm-12 last_col">
 					<div class="last_item">
 						<div class="last_item_content">
 							<div class="last_subtitle">INDIA</div>
