--- a/views/package-tour/kashmir.ejs
+++ b/views/package-tour/kashmir.ejs
@@ -20,6 +20,17 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 </div>
 
 <div class="container">
+<div class="row">
+    <div class="col l12">
+      <ul class="tabs" id="tabs-swipe-demo">
+        <li class="tab col l4"><a  class="active" href="#test-swipe-1">Kashmir tour(3N/4D)</a></li>
+        <li class="tab col l4"><a  href="#test-swipe-2">Kashmir tour(4N/5D)</a></li>
+          <li class="tab col l4"><a  href="#test-swipe-3">Kashmir tour(6N/7D)</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
                 <img  class="responsive-img" src="images/top_1.jpg" alt="">
@@ -103,14 +114,12 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 							</div>
 						</div>
           </div>
-          <br>
-<hr>
-<br><br><br>
 
 
 
 
-          <div class="container">
+
+          <div class="container" id="test-swipe-2">
           							<div class="row">
                            <div class="col l4">
                           <img  class="responsive-img" src="images/top_1.jpg" alt="">
@@ -143,7 +152,7 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
     		</div>
       	</div>
         </div>
-        <div class="container">
+        <div class="container" id="test-swipe-3">
         							<div class="row">
                          <div class="col l4">
                         <img  class="responsive-img" src="images/top_1.jpg" alt="">
@@ -257,6 +266,9 @@ $(document).ready(function(){
     $('.collapsible').collapsible();
   });
 
+  $(document).ready(function(){
+     $('.tabs').tabs();
+   });
 </script>
 
 
