--- a/views/package-tour/shimla1.ejs
+++ b/views/package-tour/shimla1.ejs
@@ -23,8 +23,8 @@
 <div class="row">
     <div class="col l12">
       <ul class="tabs" id="tabs-swipe-demo">
-        <li class="tab col l6"><a href="#test-swipe-1">SHIMAL-KUFRI TOUR</a></li>
-        <li class="tab col l6"><a class="active" href="#test-swipe-2">SHIMLA-CHAIL TOUR</a></li>
+        <li class="tab col l6"><a  class="active" href="#test-swipe-1">SHIMLA-KUFRI TOUR</a></li>
+        <li class="tab col l6"><a  href="#test-swipe-2">SHIMLA-CHAIL TOUR</a></li>
       </ul>
     </div>
 </div>
