--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -24,9 +24,9 @@
                <div class="col l4 offset-l2 s12">
                  <h5 class="white-text"> Connect with us on </h5>
 
-                   <i class="fab fa-facebook medium pr-3"></i>
-                   <i class="fab fa-twitter medium pr-3"></i>
-                   <i class="fab fa-instagram medium "></i>
+                   <i class="fab fa-facebook small pr-4"></i>
+                   <i class="fab fa-twitter small pr-4"></i>
+                   <i class="fab fa-instagram small"></i>
 
              </div>
            </div>
