--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -95,5 +95,10 @@
 
 
 <script>
-    $('.button-collapse').sideNav();
+     $('.button-collapse').sideNav();
+
+     // $(document).ready(function(){
+     //   $('.sidenav').sidenav();
+     // });
+
 </script>
