--- a/views/index.ejs
+++ b/views/index.ejs
@@ -172,7 +172,7 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
               <h4>Udaipur - Amritsar - Goa - Agra - Kerala</h4>
 
 
-							<div class="button last_button"><a href="offers.html">See Offer</a></div>
+							<div class="button last_button"><a href="/wedding">See Offer</a></div>
               <br><br>
 						</div>
 					</div>
@@ -182,13 +182,41 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
 	</div>
 
 
+    <h1 class="center cyan-text text-darken-3">More Offers !!!!</h1>
+    <hr>
+<div id="second">
+<div class="container">
 
+  <div class="row">
+    <div class="col-lg-3 ">
+    <a href="/kerala">  <img src="/img/img1.jpg" class="grid1"alt="">
+      <div class="bottom-left">Kerala Tour</div>
+    </a>
+    </div>
+    <div class="col-lg-6 ">
+    <a href="/andaman">  <img src="/img/img2.jpg" class="grid1" alt="">
+    <div class="bottom-left">Andaman Tour</div></a>
+    </div>
+    <div class="col-lg-3">
+    <a href="/goa">  <img src="/img/img3.jpg" class="grid1"alt="">
+    <div class="bottom-left">Goa Tour</div></a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-6 ">
+    <a href="/agra">  <img src="/img/img4.jpg" class="grid1" alt="">
+<div class="bottom-left">Agra Tour</div>
+    </a>
+    </div>
+    <div class="col-lg-6 ">
+    <a href="/ladakh">  <img src="/img/img5.jpg" class="grid1"alt="">
+      <div class="bottom-left">Ladakh Tour</div>
+    </a>
+    </div>
 
-
-
-
-
-
+</div>
+</div>
+</div>
 
 
 <script src="js/jquery-3.2.1.min.js"></script>
@@ -199,6 +227,7 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
 <script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script src="js/custom.js"></script>
+
 
 
 
