--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,14 +18,14 @@
   <nav class="black " style="
             height: 5rem;
         /* line-height: 30px */
-    ">
+">
     <div class="container">
       <div class="nav-wrapper">
         <a href="#" class="brand-logo"><span><img style="width:8rem" src="/img/logo.png" alt=""></span>Trip String</a>
         <a class="button-collapse" data-activates="mobile-nav" href="#">
           <i class="material-icons">menu</i>
         </a>
-        <ul class="right hide-on-med-and-down">
+        <ul class="float-right hide-on-med-and-down">
           <li>
             <a href="/tripstring">Home</a>
           </li>
