--- a/public/css/index.css
+++ b/public/css/index.css
@@ -41,6 +41,14 @@ hr { background-color: teal; height: 1px; border: 0; }
     color:purple;
     font-weight: 700;
 }
+.bottom-left {
+  color: purple;
+  font-weight: 700;
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    font-size: 2rem;
+}
 #second
   .container {
     position: relative;
@@ -56,4 +64,9 @@ font-size: 4rem;
 #second img{
   height:30%;
   width:100%;
+}
+.grid1{
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
 }
