--- a/views/index.ejs
+++ b/views/index.ejs
@@ -189,27 +189,27 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
 
   <div class="row">
     <div class="col-lg-3 ">
-    <a href="/kerala">  <img src="/img/img1.jpg" class="grid1"alt="">
+    <a href="/kerala">  <img src="/img/kerala.jpg" class="grid1"alt="">
       <div class="bottom-left">Kerala Tour</div>
     </a>
     </div>
     <div class="col-lg-6 ">
-    <a href="/andaman">  <img src="/img/img2.jpg" class="grid1" alt="">
+    <a href="/andaman">  <img src="/img/andaman.jpg" class="grid1" alt="">
     <div class="bottom-left">Andaman Tour</div></a>
     </div>
     <div class="col-lg-3">
-    <a href="/goa">  <img src="/img/img3.jpg" class="grid1"alt="">
+    <a href="/goa">  <img src="/img/goa.jpg" class="grid1"alt="">
     <div class="bottom-left">Goa Tour</div></a>
     </div>
 </div>
 <div class="row">
     <div class="col-lg-6 ">
-    <a href="/agra">  <img src="/img/img4.jpg" class="grid1" alt="">
+    <a href="/agra">  <img src="/img/agra.jpg" class="grid1" alt="">
 <div class="bottom-left">Agra Tour</div>
     </a>
     </div>
     <div class="col-lg-6 ">
-    <a href="/ladakh">  <img src="/img/img5.jpg" class="grid1"alt="">
+    <a href="/ladakh">  <img src="/img/ladakh.jpg" class="grid1"alt="">
       <div class="bottom-left">Ladakh Tour</div>
     </a>
     </div>
