--- a/views/package-tour/agra.ejs
+++ b/views/package-tour/agra.ejs
@@ -32,7 +32,7 @@ Agra is a major tourist destination because of its many Mughal-era buildings, mo
 <div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/agra1.jpg" alt="">
 
               </div>
 							<div class="col l8">
@@ -116,7 +116,7 @@ Jahangir fell in love with his widowed daughter who processes unspeakable beauty
           <div class="container" id="test-swipe-2">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/agra2.jpg" alt="">
                         </div>
           							<div class="col l8">
           								<h2 class="center teal-text">Same Day Agra Tour By Train
@@ -170,7 +170,7 @@ Jahangir fell in love with his widowed daughter who processes unspeakable beauty
         <div class="container" id="test-swipe-3">
         							<div class="row">
                          <div class="col l4">
-                        <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                        <img  class="responsive-img" src="/img/agra3.jpg" alt="">
                       </div>
         							<div class="col l8">
         								<h2 class="center teal-text">Same Day Jaipur Tour</h2>
