--- a/views/package-tour/andaman.ejs
+++ b/views/package-tour/andaman.ejs
@@ -32,7 +32,7 @@ Andaman and Nicobar is group of beautiful islands located in Bay of Bengal and h
 <div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/andaman1.jpg" alt="">
 
 
   <!-- <ul class="collapsible">
@@ -161,7 +161,7 @@ Andaman and Nicobar is group of beautiful islands located in Bay of Bengal and h
           <div class="container" id="test-swipe-2">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/andaman2.jpg" alt="">
 
                                   <ul class="collapsible">
                                     <li>
@@ -246,7 +246,7 @@ Andaman and Nicobar is group of beautiful islands located in Bay of Bengal and h
         <div class="container" id="test-swipe-3">
         							<div class="row">
                          <div class="col l4">
-                        <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                        <img  class="responsive-img" src="/img/andaman3.jpg" alt="">
 
                                 <ul class="collapsible">
                                   <li>
