--- a/views/package-tour/dharam.ejs
+++ b/views/package-tour/dharam.ejs
@@ -50,7 +50,7 @@ Kangra
           <div class="container">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/dharam1.jpg" alt="">
                           <h4>
                             Package Cost
 Rs. 8500 Per Person
