--- a/views/package-tour/kerala.ejs
+++ b/views/package-tour/kerala.ejs
@@ -33,7 +33,7 @@
 <div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/kerala1.jpg" alt="">
               </div>
 							<div class="col l8">
 								<h2 class="center teal-text">Kerala TOUR (05 NIGHTS / 06 DAYS )</h2>
@@ -93,7 +93,7 @@
         <div class="container" id="test-swipe-2">
         							<div class="row">
                          <div class="col l4">
-                        <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                        <img  class="responsive-img" src="/img/kerala2.jpg" alt="">
                       </div>
         							<div class="col l8">
         								<h2 class="center teal-text">Kerala Tour(10 Days)</h2>
