--- a/views/package-tour/ladakh.ejs
+++ b/views/package-tour/ladakh.ejs
@@ -23,8 +23,8 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 <div class="container">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
-
+                <img  class="responsive-img" src="/img/ladakh1.jpg" alt="">
+                <img  class="responsive-img pt-5 mt-5" src="/img/ladakh2.jpg" alt="">
 
   <ul class="collapsible">
     <li>
