--- a/views/package-tour/manali.ejs
+++ b/views/package-tour/manali.ejs
@@ -32,7 +32,7 @@
 <div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/manali1.jpg" alt="">
                 <h4>  InclusionsPLAN </h4>
                <ul>
                  <li>Sightseeing</li>
@@ -76,7 +76,7 @@ After Breakfast at hotel you need to vacate the room by 11 AM. Afternoon will be
           <div class="container" id="test-swipe-2">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/manali2.jpg" alt="">
                           <h4>Inclusions :</h4>
                           <ul>
                             <li>»Accommodation on twin sharing basis in Deluxe rooms.</li>
@@ -125,7 +125,7 @@ Our expertly curated Manali tour itinerary provides the best experience. This is
         <div class="container" id="test-swipe-3">
                       <div class="row">
                          <div class="col l4">
-                        <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                        <img  class="responsive-img" src="/img/manali3.jpg" alt="">
                         <h4>This package includes:</h4>
                         <ul>
                           <li>»  Evening Tea with Cookies</li>
