--- a/views/package-tour/rajasthan.ejs
+++ b/views/package-tour/rajasthan.ejs
@@ -16,7 +16,8 @@
 <div class="container">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/rajasthan.jpg" alt="">
+                <img  class="responsive-img pt-5 mt-5" src="/img/rajasthan1.jpg" alt="">
               </div>
 							<div class="col l8">
 								<h2 class="center teal-text">Rajasthan GRAND TOUR</h2>
