--- a/views/package-tour/darjelling.ejs
+++ b/views/package-tour/darjelling.ejs
@@ -20,7 +20,7 @@
           <div class="container">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/darjelling.jpg" alt="">
                         </div>
           							<div class="col l8">
           								<h2 class="center teal-text">Darjeeling TOUR</h2>
