--- a/views/package-tour/goa.ejs
+++ b/views/package-tour/goa.ejs
@@ -32,7 +32,7 @@ Goa is visited by large numbers of international and domestic tourists each year
 <div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/goa1.jpg" alt="">
         <ul class="collapsible">
           <li>
             <div class="collapsible-header"><i class="material-icons">filter_drama</i>Tour Cost Includes</div>
@@ -118,7 +118,7 @@ Goa is visited by large numbers of international and domestic tourists each year
           <div class="container" id="test-swipe-2">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/goa2.jpg" alt="">
 
                                   <ul class="collapsible">
                                     <li>
@@ -229,7 +229,7 @@ Move to your origin point of your trip
         <div class="container" id="test-swipe-3">
         							<div class="row">
                          <div class="col l4">
-                        <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                        <img  class="responsive-img" src="/img/goa3.jpg" alt="">
 
                                 <ul class="collapsible">
                                   <li>
