--- a/views/package-tour/kashmir.ejs
+++ b/views/package-tour/kashmir.ejs
@@ -33,7 +33,7 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 <div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/kashmir2.jpg" alt="">
                 <h4>Tour Cost Includes</h4>
 
   <ul class="collapsible">
@@ -122,7 +122,7 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
           <div class="container" id="test-swipe-2">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/kashmir3.jpg" alt="">
                         </div>
           							<div class="col l8">
           								<h2 class="center teal-text">Kashmir TOUR 04 NIGHTS / 5 DAYS</h2>
@@ -155,7 +155,7 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
         <div class="container" id="test-swipe-3">
         							<div class="row">
                          <div class="col l4">
-                        <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                        <img  class="responsive-img" src="/img/kashmir4.jpg" alt="">
                         <ul class="collapsible">
     <li>
       <div class="collapsible-header"><i class="material-icons">filter_drama</i>Tour Cost Includes</div>
