--- a/views/package-tour/shimla1.ejs
+++ b/views/package-tour/shimla1.ejs
@@ -23,8 +23,8 @@
 <div class="row">
     <div class="col l12">
       <ul class="tabs" id="tabs-swipe-demo">
-        <li class="tab col l6"><a href="#test-swipe-1">SHIMAL-KUFRI TOUR</a></li>
-        <li class="tab col l6"><a class="active" href="#test-swipe-2">SHIMLA-CHAIL TOUR</a></li>
+        <li class="tab col l6"><a  class="active" href="#test-swipe-1">SHIMLA-KUFRI TOUR</a></li>
+        <li class="tab col l6"><a  href="#test-swipe-2">SHIMLA-CHAIL TOUR</a></li>
       </ul>
     </div>
 </div>
@@ -32,7 +32,7 @@
 <div class="container" id="test-swipe-1" class="col s12">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/shimla2.jpg" alt="">
               </div>
 							<div class="col l8">
 								<h2 class="center teal-text">SHIMAL-KUFRI TOUR</h2>
@@ -68,7 +68,7 @@
           <div class="container" id="test-swipe-2" class="col s12">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/shimla3.jpg" alt="">
                         </div>
           							<div class="col l8">
           								<h2 class="center teal-text">SHIMLA-CHAIL TOUR</h2>
