--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -24,8 +24,8 @@
                <div class="col l4 offset-l2 s12">
                  <h5 class="white-text"> Connect with us on </h5>
 
-                   <i class="fab fa-facebook medium pr-3"></i>
-                   <i class="fab fa-twitter medium pr-3"></i>
+                   <i class="fab fa-facebook medium"></i>
+                   <i class="fab fa-twitter medium mt-2"></i>
                    <i class="fab fa-instagram medium "></i>
 
              </div>
