--- a/public/css/main_styles.css
+++ b/public/css/main_styles.css
@@ -2,9 +2,7 @@
 /* CSS Document */
 
 /******************************
-
 [Table of Contents]
-
 1. Fonts
 2. Body and some general stuff
 3. Home
@@ -24,8 +22,6 @@
 11. Special Offers
 12. Newsletter
 13. Footer
-
-
 ******************************/
 
 /***********
@@ -515,12 +511,12 @@ section
 .special
 {
 	/* margin-top:-2.5rem; */
-	padding-bottom: 6px;
+	padding-bottom:0.375rem;
 	background: #FFFFFF ;
 }
 .special_content
 {
-	margin-top: 76px;
+	margin-top: 4.5rem;
 }
 .special_item_content
 {
@@ -536,13 +532,13 @@ section
 }
 .special_category
 {
-	font-size: 24px;
+	font-size: 1.5rem;
 	font-weight: 300;
 	color: #FFFFFF;
 }
 .special_title a
 {
-	font-size: 36px;
+	font-size:2.25rem;
 	font-weight: 300;
 	color: #FFFFFF;
 }
@@ -593,9 +589,9 @@ section
 	-ms-transform: translateY(-50%);
 	-o-transform: translateY(-50%);
 	transform: translateY(-50%);
-	right: 20px;
-	width: 90px;
-	height: 90px;
+	right: 1.25rem;
+	width:5.625rem;
+	height: 5.625rem;
 	background: #fe3c52;
 	border-radius: 50%;
 	cursor: pointer;
