--- a/views/package-tour/kashmir.ejs
+++ b/views/package-tour/kashmir.ejs
@@ -20,9 +20,20 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 </div>
 
 <div class="container">
+<div class="row">
+    <div class="col l12">
+      <ul class="tabs" id="tabs-swipe-demo">
+        <li class="tab col l4"><a  class="active" href="#test-swipe-1">Kashmir tour(3N/4D)</a></li>
+        <li class="tab col l4"><a  href="#test-swipe-2">Kashmir tour(4N/5D)</a></li>
+          <li class="tab col l4"><a  href="#test-swipe-3">Kashmir tour(6N/7D)</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/kashmir2.jpg" alt="">
                 <h4>Tour Cost Includes</h4>
 
   <ul class="collapsible">
@@ -103,17 +114,15 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 							</div>
 						</div>
           </div>
-          <br>
-<hr>
-<br><br><br>
 
 
 
 
-          <div class="container">
+
+          <div class="container" id="test-swipe-2">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/kashmir3.jpg" alt="">
                         </div>
           							<div class="col l8">
           								<h2 class="center teal-text">Kashmir TOUR 04 NIGHTS / 5 DAYS</h2>
@@ -143,10 +152,10 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
     		</div>
       	</div>
         </div>
-        <div class="container">
+        <div class="container" id="test-swipe-3">
         							<div class="row">
                          <div class="col l4">
-                        <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                        <img  class="responsive-img" src="/img/kashmir4.jpg" alt="">
                         <ul class="collapsible">
     <li>
       <div class="collapsible-header"><i class="material-icons">filter_drama</i>Tour Cost Includes</div>
@@ -257,6 +266,9 @@ $(document).ready(function(){
     $('.collapsible').collapsible();
   });
 
+  $(document).ready(function(){
+     $('.tabs').tabs();
+   });
 </script>
 
 
