--- a/views/package-tour/manali.ejs
+++ b/views/package-tour/manali.ejs
@@ -1,6 +1,6 @@
 
 <% include ../partials/header %>
-<link rel="stylesheet" href="/css/shimla1.css">
+<link rel="stylesheet" href="/css/manali.css">
 <div class="img">
   <div class="bg">
   </div>
@@ -16,16 +16,23 @@
 
 </div>
 </div>
-<div class="container">
-<ul class="collapsible">
-    <li>
-      <div class="collapsible-header"><i class="material-icons">filter_drama</i> Manali Package for 2N\3D</div>
-      <div class="collapsible-body">
 
 <div class="container">
+<div class="row">
+    <div class="col l12">
+      <ul class="tabs" id="tabs-swipe-demo">
+        <li class="tab col l4"><a  class="active" href="#test-swipe-1">Manali tour(2N/3D)</a></li>
+        <li class="tab col l4"><a  href="#test-swipe-2">Manali tour(3N/4D)</a></li>
+          <li class="tab col l4"><a  href="#test-swipe-3">Manali tour(3N/4D) Honeymoon</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                <img  class="responsive-img" src="/img/manali1.jpg" alt="">
                 <h4>  InclusionsPLAN </h4>
                <ul>
                  <li>Sightseeing</li>
@@ -60,19 +67,16 @@ After Breakfast at hotel you need to vacate the room by 11 AM. Afternoon will be
 							</div>
 						</div>
           </div>
-        </div>
-      </li>
 
 
-      <li>
-        <div class="collapsible-header"><i class="material-icons">filter_drama</i>Manali Package for 3N\4D</div>
-        <div class="collapsible-body">
 
 
-          <div class="container">
+
+
+          <div class="container" id="test-swipe-2">
           							<div class="row">
                            <div class="col l4">
-                          <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                          <img  class="responsive-img" src="/img/manali2.jpg" alt="">
                           <h4>Inclusions :</h4>
                           <ul>
                             <li>»Accommodation on twin sharing basis in Deluxe rooms.</li>
@@ -116,15 +120,12 @@ Our expertly curated Manali tour itinerary provides the best experience. This is
     		</div>
       	</div>
         </div>
-      </div>
-    </li>
-    <li>
-      <div class="collapsible-header"><i class="material-icons">filter_drama</i>3N-4D special honeymoon packages manali from Delhi</div>
-      <div class="collapsible-body">
-        <div class="container">
+
+
+        <div class="container" id="test-swipe-3">
                       <div class="row">
                          <div class="col l4">
-                        <img  class="responsive-img" src="images/top_1.jpg" alt="">
+                        <img  class="responsive-img" src="/img/manali3.jpg" alt="">
                         <h4>This package includes:</h4>
                         <ul>
                           <li>»  Evening Tea with Cookies</li>
@@ -181,8 +182,21 @@ Welcome Drinks on arrival (Non Alcoholic)
       </div>
 
 </div>
-</div>
-</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <div class="fixed-action-btn">
   <a class="btn-floating btn-large red">
@@ -202,6 +216,9 @@ $(document).ready(function(){
 $(document).ready(function(){
     $('.collapsible').collapsible();
   });
+
+
+
 
 </script>
 
