--- a/views/form1.ejs
+++ b/views/form1.ejs
@@ -1,3 +1,49 @@
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+	 <!------Heading------->
+	  <div class="heading">
+	  	<h2>Select Your Own Package</h2>
+	  </div>
+
+     <!------Form Box------>
+      <div class="container">
+      	 <form action="" class="form">
+      	 	<input type="text" name="fullname" placeholder="Full Name">
+      	 	<input type="text" name="phone" placeholder="Phone Number">
+      	 	<textarea name="message" id="" cols="30" rows="5" placeholder="Message"></textarea>
+          <input type="text" name="email" placeholder="email">
+      	 	<button class="submit">Submit</button>
+      	 </form>
+      </div>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
 <% include ./partials/header %>
 <link rel="stylesheet" href="/css/form.css">
 
@@ -35,4 +81,4 @@
           </form>
 </div>
 </div>
-<% include ./partials/footer %>
+<% include ./partials/footer %> -->
