--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 
 
 
-	<div class="special">
+	<div class="special ">
 		<div class="container">
 
 			<div class="row">
@@ -140,7 +140,7 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 </div>
 
 
-	<div class="last">
+	<div class="last pt-5 mt-5">
 
 		<div class="last_background parallax-window" data-parallax="scroll" data-image-src="images/last.jpg" data-speed="0.8"></div>
 
@@ -190,27 +190,27 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
   <div class="row">
     <div class="col-lg-3 ">
     <a href="/kerala">  <img src="/img/kerala.jpg" class="grid1"alt="">
-      <div class="bottom-left">Kerala Tour</div>
+      <div class="bottom-left"><button class="btn btn-teal">Kerala Tour</button></div>
     </a>
     </div>
     <div class="col-lg-6 ">
     <a href="/andaman">  <img src="/img/andaman.jpg" class="grid1" alt="">
-    <div class="bottom-left">Andaman Tour</div></a>
+    <div class="bottom-left"><button class="btn btn-teal">Andaman Tour</button></div></a>
     </div>
     <div class="col-lg-3">
     <a href="/goa">  <img src="/img/goa.jpg" class="grid1"alt="">
-    <div class="bottom-left">Goa Tour</div></a>
+    <div class="bottom-left"><button class="btn btn-teal">Goa Tour</button></div></a>
     </div>
 </div>
 <div class="row">
     <div class="col-lg-6 ">
     <a href="/agra">  <img src="/img/agra.jpg" class="grid1" alt="">
-<div class="bottom-left">Agra Tour</div>
+<div class="bottom-left"><button class="btn btn-teal">Agra Tour</button></div>
     </a>
     </div>
     <div class="col-lg-6 ">
     <a href="/ladakh">  <img src="/img/ladakh.jpg" class="grid1"alt="">
-      <div class="bottom-left">Ladakh Tour</div>
+      <div class="bottom-left"><button class="btn btn-teal">Ladakh Tour</button></div>
     </a>
     </div>
 
