--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,13 +36,13 @@
             <a href="#foot">Contact</a>
           </li>
           <li>
-            <a href="#special1">TravelPackages</a>
+            <a href="/tripstring#special1">TravelPackages</a>
           </li>
           <li>
             <a href="/form_mice">Mice</a>
           </li>
           <li>
-            <a href="#">DestinationWeddings</a>
+            <a href="/wedding">DestinationWeddings</a>
           </li>
           <li>
             <a href="#">
