--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -18,8 +18,8 @@ body {
 }
 .container {
 	position: relative;
-	height: 28.125rem;
-	width: 23.75rem;
+	height: 40rem;
+	width: 26rem;
 	background:#fff;
 	border-radius: 1.525rem;
 	margin: 2% auto;
@@ -73,4 +73,7 @@ textarea{
 	font-family: inherit;
 	text-transform: uppercase;
 	margin: 20px 6.25rem;
+}
+h3{
+  margin-top: 20px;
 }
