--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,3 +1,61 @@
+
+
+    <link rel="stylesheet" type="text/css" href="css/style1.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+	 <!------Heading------->
+	  <div class="heading">
+	  	<h2>Select Your Own Package</h2>
+	  </div>
+
+     <!------Form Box------>
+      <div class="container">
+      	 <form action="" class="form">
+      	 	<input type="text" name="user[firstname]" placeholder="Full Name">
+             <h3>Travel</h3>
+      	 	<input type="text"  name="user[travelfrom]" placeholder="From">
+          <input type="text"  name="user[travelto]" placeholder="To">
+             <h3>Date</h3>
+          <input type="text"  name="user[datefrom]" placeholder="From">
+          <input type="text"  name="user[dateto]" placeholder="To">
+
+             <h3>No of People</h3>
+          <input type="text" name="user[adults]" placeholder="Adult">
+          <input type="text" name="user[children]" placeholder="Children">
+          <input type="text"name="user[phoneno]" placeholder="Phone Number">
+      	 	<input type="text" name="user[email]" placeholder="Email Id">
+      	 	<button class="submit">Submit</button>
+      	 </form>
+      </div>
+
+
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
 <% include ./partials/header %>
 <link rel="stylesheet" href="/css/form.css">
 
@@ -67,4 +125,4 @@ $('.datepicker').pickadate({
 </script>
 
 
-<% include ./partials/footer %>
+<% include ./partials/footer %> -->
