--- a/views/package-tour/agra.ejs
+++ b/views/package-tour/agra.ejs
@@ -228,17 +228,12 @@ Jahangir fell in love with his widowed daughter who processes unspeakable beauty
 
 
 
-        <div class="fixed-action-btn">
-  <a class="btn-floating btn-large red">
-    <i class="large material-icons">mode_edit</i>
-  </a>
-  <ul>
-    <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-    <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-    <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-    <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-  </ul>
-</div>
+                  <div class="fixed-action-btn">
+            <a class="btn-floating btn-large red pulse" href="/form_query">
+              <i class="large material-icons">mode_edit</i>
+            </a>
+
+          </div>
 <script>
 $(document).ready(function(){
  $('.fixed-action-btn').floatingActionButton();
@@ -252,6 +247,9 @@ $(document).ready(function(){
   $(document).ready(function(){
      $('.tabs').tabs();
    });
+
+
+
 </script>
 
 
