--- a/views/package-tour/ladakh.ejs
+++ b/views/package-tour/ladakh.ejs
@@ -120,16 +120,12 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 
 
           <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red">
-        <i class="large material-icons">mode_edit</i>
-        </a>
-        <ul>
-        <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-        <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-        <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-        <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-        </ul>
-        </div>
+    <a class="btn-floating btn-large red pulse"
+    href="/form_query">
+      <i class="large material-icons">mode_edit</i>
+    </a>
+
+  </div>
         <script>
         $(document).ready(function(){
         $('.fixed-action-btn').floatingActionButton();
